samples/_failures_safe/1761128507_bd3551_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3a3dc943.c: In function ‘main’:
./samples/SAFE/__tmp_3a3dc943.c:147:16: error: missing terminating " character
  147 |         printf("Invalid parameters
      |                ^~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_3a3dc943.c:147:9: error: expected expression at end of input
  147 |         printf("Invalid parameters
      |         ^~~~~~
./samples/SAFE/__tmp_3a3dc943.c:147:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3a3dc943.c:147:9: error: expected declaration or statement at end of input
